# aoc-day18-benchmarks

./: README.md  run_cpp_benchmarks.sh  run_rust_benchmarks.sh
bench_output/: cpp.txt  cpp_clang.txt  rust.txt
cpp/: README.md  bench.cpp  defs.h  main-part2.cpp  meson.build  meson_options.txt  part2.cpp  vec3.h
cpp/sets/: absl_flat_set.h  btree.h  dense.h  hashset.h  rbtree.h
rust/: Cargo.toml  PARSE  callgrind.out.138667
rust/src/: lib.rs  main.rs
