[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.4.0"
derive_more = "0.99.17"
fxhash = "0.2.1"

[lib]
name = "libaoc"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[features]
hashset = []
fxhash = []

